--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     "routes": [
       { 
-        "src": "/(.*)",  
+        "src": "/",  
         "dest": "/api/index.php" 
       },
       { "src": "/LGC.js", "dest": "/api/LGC.js" },
